# pbrt-rs

./: Cargo.toml
src/: base.rs  bxdf.rs  camera.rs  film.rs  geometry.rs  lib.rs  lights.rs  main.rs  math.rs  media.rs  primitives.rs  sampling.rs  shapes.rs  util.rs
src/base/: camera.rs  film.rs
src/camera/: base.rs  camera.rs  camera_sample.rs  cameras.rs  film.rs  mod.rs  orthographic.rs  perspective.rs  sensor.rs
src/color/: color_space.rs  colors.rs  mod.rs
src/core/: array2d.rs  bounds.rs  constants.rs  float.rs  frame.rs  interaction.rs  interval.rs  mod.rs  normal3.rs  point.rs  ray.rs  routines.rs  spherical.rs  square_matrix.rs  transform.rs  tuple.rs  vec.rs  vec_math.rs
src/geometry/: bounds.rs  bounds3.rs  direction_cone.rs  frame.rs  interaction.rs  matrix4x4.rs  mod.rs  normal3.rs  point2.rs  point3.rs  point3fi.rs  ray.rs  routines.rs  shape.rs  transform.rs  tuple.rs  vec3.rs  vec3fi.rs
src/image/: filter.rs  mod.rs
src/imaging/: image.rs  mod.rs
src/integrate/: mod.rs
src/integrators/: base.rs  mod.rs  random_walk.rs  simple_path.rs
src/lights/: base.rs  directional.rs  infinite.rs  mod.rs  point.rs
src/materials/: mappings.rs  material.rs  mod.rs  textures.rs
src/math/: array2d.rs  direction_cone.rs  equal_area_mapping.rs  float_utility.rs  interval.rs  matrix4x4.rs  mod.rs  normal3.rs  octahedral_vec.rs  point.rs  routines.rs  square_matrix.rs  tuple.rs  vec.rs  vec3.rs  vec_math.rs
src/media/: medium.rs  medium_interface.rs  mod.rs  phase_function.rs
src/medium/: medium.rs  mod.rs
src/memory/: arena.rs  buffer_cache.rs  cache.rs  intern_cache.rs  mod.rs
src/parallel/: atomic.rs  loops.rs  mod.rs  routines.rs
src/primitives/: aggregates.rs  mod.rs  single.rs
src/reflection/: base.rs  dielectric.rs  diffuse.rs  mod.rs
src/sampling/: light_sampler.rs  mod.rs  routines.rs  sampler.rs  spectrum.rs  variance.rs
src/scene_parsing/: common.rs  construct.rs  mod.rs  scene.rs
src/scene_parsing/directives/: accelerators.rs  cameras.rs  color_spaces.rs  film.rs  filters.rs  integrators.rs  lights.rs  mod.rs  samplers.rs  shapes.rs  textures.rs  transforms.rs
src/scenes/: mod.rs  parsing.rs
src/scenes/directives/: mod.rs  transforms.rs
src/shapes/: base.rs  bilinear_patch.rs  common.rs  mod.rs  sphere.rs
src/util/: cache.rs  color.rs  color_space.rs  data.rs  error.rs  memory.rs  mod.rs  rng.rs  routines.rs  sampling.rs  spectrum.rs
