[package]
name = "pbrt-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "rgb2spec-opt"
path = "src/bin/rgb2spec_opt.rs"

[dependencies]
approx = "0.5.1"
bitflags = "2.6.0"
bumpalo = "3.16.0"
bytemuck = { version = "1.16.3", features = ["derive"] }
clap = { version = "4.5.16", features = ["derive"] }
crossbeam-utils = "0.8.20"
delegate = "0.12.0"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["add", "add_assign", "mul", "mul_assign", "not", "from", "index", "index_mut"] }
enum-as-inner = "0.6.0"
enum_dispatch = "0.3.13"
glam = { version = "0.28.0", optional = true, features = ["bytemuck"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
inherent = "1.0.11"
internment = { version = "0.8.4", optional = true, features = ["arc"] }
itertools = "0.13.0"
libm = "0.2.8"
murmur3 = "0.5.2"
num-traits = "0.2.19"
ordered-float = "4.2.2"
overload = "0.1.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.127"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
winnow = "0.6.18"

[features]
use-f64 = []
external-impls = ["glam"]
glam = ["dep:glam"]
