[package]
name = "pbrt-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
approx = "0.5.1"
bitflags = "2.6.0"
bon = "2.3.0"
bumpalo = "3.16.0"
bytemuck = { version = "1.16.3", features = ["derive"] }
crossbeam-utils = "0.8.20"
delegate = "0.12.0"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["add", "add_assign", "mul", "mul_assign", "not", "from", "index", "index_mut"] }
enum-as-inner = "0.6.0"
enum_dispatch = "0.3.13"
env_logger = "0.11.5"
exr = "1.72.0"
glam = { version = "0.28.0", optional = true, features = ["bytemuck"] }
hashbrown = "0.14.5"
indicatif = { version = "0.17.8", features = ["rayon"] }
inherent = "1.0.11"
internment = { version = "0.8.4", optional = true, features = ["arc"] }
itertools = "0.13.0"
libm = "0.2.8"
log = "0.4.22"
murmur3 = "0.5.2"
num-traits = "0.2.19"
ordered-float = "4.2.2"
overload = "0.1.1"
rand = "0.8.5"
rand_pcg = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "local-offset", "macros"] }
winnow = "0.6.18"

[features]
use-f64 = []
external-impls = ["glam"]
glam = ["dep:glam"]
